[tool.poetry]
name = "ancb"
version = "0.1.2"
description = "Fast, efficient, and powerful NumPy compatible circular buffers."
authors = ["Ember Chow <emberchow.business@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/EmDash00/ANCB"
classifiers = [
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[virtualenvs]
in-project = true
